--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -613,3 +613,16 @@ hr {
   opacity: 0;
   text-transform: uppercase;
 }
+
+
+.languages {
+  position: absolute;
+  top: 10px;
+  right: 40px;
+  z-index: 101;
+}
+
+.languages a {
+  padding: 5px;
+  color: #222;
+}
